--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,8 +32,8 @@ body {
   display: flex;
   flex-direction: column;
   list-style-type: none;
-  border: 5px lime inset;
-  background-color: purple;
+  border: 5px gold ridge;
+  background-color: rgb(26, 34, 34);
   align-items: center;
   color: white;
 }
@@ -46,6 +46,7 @@ body {
 .pokeIMG {
   width: 75%;
   margin: 1rem;
+  border-radius: 5px;
 }
 
 #pokemon-form {
