--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,12 @@ import '../styles/index.css';
 		<section class='container'>
 		
 		</section>
+
+		<button id='nextPage'>Load Cards</button>
 		
 	</main>
+
+	
 
 <!-- Connect the pokemonFinder.js script -->
 <script src="../scripts/pokemonFinder.js"></script>
